--- a/functions/package.json
+++ b/functions/package.json
@@ -28,7 +28,7 @@
     "firebase-functions": "^3.0.2",
     "firebase-tools": "^7.0.1",
     "glob": "^7.1.4",
-    "grpc": "^1.23.1",
+    "grpc": "^1.24.3",
     "libphonenumber-js": "^1.7.18",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
@@ -39,6 +39,7 @@
   },
   "private": true,
   "devDependencies": {
+    "eslint": "^7.2.0",
     "firebase-functions-test": "^0.1.6",
     "jest": "^24.8.0"
   },
